[package]
name = "textscope"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.25.0"
clap = { version = "3.2.17", features = ["derive"] }
clap_derive = "3.2.17"
signal-hook = { version = "0.3.14", features = ["extended-siginfo"] }
